--- a/GardenMembership.UI/Pages/Shared/_Layout.cshtml
+++ b/GardenMembership.UI/Pages/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Index">Page2</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Baskets/Index">Baskets</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
